fixed spacing

--- a/css/team.css
+++ b/css/team.css
@@ -159,7 +159,6 @@
 }
 
 .grid figure h2 {
-    word-spacing: -0.15em;
     font-weight: 300;
 }
 
